# mmpt

./: .gitignore  LICENSE  README.md  align_wavelengths.py  paths_processing_win7.json  process_MM.py  process_MM_batch.ipynb  process_MM_win7.ipynb  process_mueller_matrices.py  processing_ij.py  pyproject.toml  visualize_MM.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
data/: filenames.pickle  filenames_results.pickle  name_combined.txt  names_combined_viz.txt  parameters_map.json  parameters_map.pickle  parameters_plot.json  parameters_plot.pickle
src/mmpt/: libmpMPIdenoisePDDN.py  libmpMuelMat.py  processingmm.py  utils.py
src/mmpt/C-libs/: comp_MM_eig_REls.c  compute_Depol_Params.c  compute_Depol_Params_data.c  compute_Depol_Params_data.h  compute_Depol_Params_initialize.c  compute_Depol_Params_terminate.c  compute_Depol_Params_terminate.h  compute_Diatt_Params.h  compute_Diatt_Params_data.c  compute_Diatt_Params_initialize.c  compute_Diatt_Params_initialize.h  compute_Diatt_Params_terminate.c  compute_Diatt_Params_types.h  compute_MM_polarLuChipman.c  compute_MM_polarLuChipman_data.h  compute_MM_polarLuChipman_initialize.c  compute_MM_polarLuChipman_initialize.h  compute_MM_polarLuChipman_terminate.c  compute_MM_polarLuChipman_terminate.h  compute_MM_polarLuChipman_types.h  compute_M_AIW_data.h  compute_M_AIW_initialize.c  compute_M_AIW_initialize.h  compute_M_AIW_terminate.h  compute_Retard_Params_data.h  compute_Retard_Params_initialize.c  compute_Retard_Params_terminate.h  compute_Retard_Params_types.h  compute_det4x4real.c  compute_det4x4real.h  eig.h  eigL4x4real.h  eigL4x4real_data.c  eigL4x4real_terminate.c  eigL4x4real_terminate.h  eigL4x4real_types.h  fixVals_ancillary.c  fixVals_ancillary.h  fixVals_restoreValues2D.h  fixVals_restoreValues3D.c  (+30 more)
src/mmpt/addons/: align_wavelengths.py  denoise_intensities.py  plot_polarimetry.py  predict.py  rotate_MM.py  visualization_lines.py
src/mmpt/data/: gaussian_fit_IMP.npy  parameter_names.json  parameters_plot.json
src/processingmm/: MM_processing.py  __init__.py  add_calibration.py  align_wavelengths.py  batch_processing.py  batch_processing_win7.py  helpers.py  libmpMPIdenoisePDDN.py  libmpMuelMat.py  libmpMuelMat_old.py  multi_img_processing.py  plot_polarimetry.py  processingmm.py  reorganize_folders.py  utils.py  visualization_lines.py
src/processingmm/AzimuthStdViz/: AzimuthStdViz.py
src/processingmm/C-libs/: comp_MM_eig_REls.h  compileMeFirst.sh  compute_Depol_Params.h  compute_Depol_Params_initialize.h  compute_Depol_Params_types.h  compute_Diatt_Params.c  compute_Diatt_Params_data.h  compute_Diatt_Params_terminate.h  compute_MM_polarLuChipman.h  compute_MM_polarLuChipman_data.c  compute_M_AIW.c  compute_M_AIW.h  compute_M_AIW_data.c  compute_M_AIW_terminate.c  compute_M_AIW_types.h  compute_Retard_Params.c  compute_Retard_Params.h  compute_Retard_Params_data.c  compute_Retard_Params_initialize.h  compute_Retard_Params_terminate.c  eig.c  eigL4x4real.c  eigL4x4real_data.h  eigL4x4real_initialize.c  eigL4x4real_initialize.h  eigL4x4real_rtwutil.c  eigL4x4real_rtwutil.h  fixVals_ancillary.c  fixVals_ancillary.h  fixVals_restoreValues2D.c  fixVals_restoreValues2D.h  fixVals_restoreValues3D.c  fixVals_restoreValues3D.h  fixVals_updateValues2D.c  fixVals_updateValues2D.h  fixVals_updateValues3D.c  fixVals_updateValues3D.h  mp_comp_MM_AIW.c  mp_comp_MM_AIW.h  mp_comp_MM_det.c  (+28 more)
src/processingmm/addons/: add_calibration.py  (+7 more)
tests/: Untitled.ipynb  align_wls.py  process_MM.py  process_MM_batch.ipynb  test_processingMM.py  test_processingMM_PDDN.py  test_processingmm.py  test_script.py
(+37 files in other folders)
