# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "processingMM"
description = "Automatic Mueller Matrix processing and plotting of the different polariemtric parameters."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "elearomy.gros@unibe.ch", name = Éléa Gros" },
]
dynamic = ["version"]
dependencies = ["numpy==1.26.4", "numba", "matplotlib", "scipy", "tqdm", "opencv-python", "scikit-image", "cmocean", "pandas", "einops", "ema_pytorch", "imageio", "Pillow", "tensorboard", "torch", "torchsummary", "torchvision"]

[tool.hatch.version]
path = "src/processingmm/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/RomGr/processingMM"
repository = "https://github.com/RomGr/processingMM"
