# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "mmpt"
description = "Automatic Mueller Matrix processing and plotting of the different polariemtric parameters."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
maintainers = [
    { name = "Elea Gros", email = "elearomy.gros@unibe.ch" },
]
dynamic = ["version"]
dependencies = ["numpy", "numba", "matplotlib", "scipy", "tqdm", "opencv-python", "scikit-image", "cmocean", "pandas", "einops", "imageio", "Pillow", "simpleITK", "omegaconf", "scikit-learn"]
# dependencies for machine learning "tensorboard", "torch", "torchsummary", "torchvision", "ema_pytorch",

[tool.hatch.version]
path = "src/mmpt/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/eleagros/mmpt"
repository = "https://github.com/eleagros/mmpt"
